0.03
    - Fixed bugs in tests (for example not be stopped memcached)
    - New test - multi-process reading/getting from memcached (with forks)
    - Added documentation about constructor and methods.

0.02
    - Added repo meta info of github.com repository
    - few changes of Makefile.PL ('README' file is generated by auto)
    - Added 'Changes' file ;-)
    - Added TODO file

0.01
    - First release