@@ -1,9 +1,10 @@
 ---
-abstract: 'Cache dependencies (principles of operation of make utility)'
+abstract: 'A cache dependencies (principles of operation of make utility)'
 author:
   - 'Perlover <perlover@perlover.com>'
 build_requires:
   ExtUtils::MakeMaker: 6.42
+  Storable: 0
   Test::Base: 0
   Test::More: 0
 configure_requires:
