@@ -23,6 +23,7 @@
       "build" : {
          "requires" : {
             "ExtUtils::MakeMaker" : "6.42",
+            "Storable" : 0,
             "Test::Base" : 0,
             "Test::More" : 0
          }
