@@ -23,7 +23,7 @@ if ($?) {
     plan skip_all => "Cannot start the memcached for this test ($out)";
 }
 
-my ($pid_slow, $pid_quick);
+my ($pid_slow, $pid_quick, $big_array_type);
 
 setup_for_slow_process();
 
@@ -61,14 +61,14 @@ $SIG{__DIE__} = sub {
 $SIG{TERM} = $SIG{INT} = $SIG{HUP} = sub { die "Terminated by " . shift };
 $SIG{ALRM} = sub { die "Alarmed!" };
 
-alarm( DELAY * 2 + 2 );
+alarm( DELAY * 4 + 1 );
 
 start_parent_commanding();
 
 exit 0;
 
 sub start_parent_commanding {
-    plan tests => 5;
+    plan tests => 12;
 
     my $in;
 
@@ -87,6 +87,28 @@ sub start_parent_commanding {
     ok(	abs( DELAY * 2 - $in->{time2} + $in->{time1} ) < 0.1, 'time of save1' );
     ok(	defined($in->{value}), 'value of save1 defined' );
     is_deeply( $in->{value}, [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ], 'value of save1' );
+
+    print CHILD_SLOW_WTR "save2\n"		or die $!;
+
+    sleep 0.1;
+
+    print CHILD_QUICK_WTR "read1\n"		or die $!;
+    $in = fd_retrieve(\*CHILD_QUICK_RDR)	or die "fd_retrieve";
+
+    ok( $in->{time2} - $in->{time1} < 0.1, 'time of read1(2)' );
+    is_deeply( $in->{value}, [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ], 'value of save2 before' );
+
+    $in = fd_retrieve(\*CHILD_SLOW_RDR);
+
+    ok(	abs( DELAY * 2 - $in->{time2} + $in->{time1} ) < 0.1, 'time of save2' );
+    ok(	defined($in->{value}), 'value of save2 defined' );
+    is_deeply( $in->{value}, [ 101, 102, 103, 104, 105, 106, 107, 108, 109, 110 ], 'value of save2' );
+
+    print CHILD_QUICK_WTR "read1\n"		or die $!;
+    $in = fd_retrieve(\*CHILD_QUICK_RDR)	or die "fd_retrieve";
+
+    ok( $in->{time2} - $in->{time1} < 0.1, 'time of read1(3)' );
+    is_deeply( $in->{value}, [ 101, 102, 103, 104, 105, 106, 107, 108, 109, 110 ], 'value of save2 after' );
 
     print CHILD_SLOW_WTR "exit\n"		or die $!;
     print CHILD_QUICK_WTR "exit\n"		or die $!;
@@ -114,6 +136,17 @@ sub run_slow_process {
 
 	if ($line eq 'save1') {
 	    $out = {};
+
+	    $out->{time1} = time;
+	    $out->{value} = $cascade->run('one_page_0');
+	    $out->{time2} = time;
+	    store_fd $out, \*PARENT_SLOW_WTR;
+	}
+	elsif ($line eq 'save2') {
+	    $out = {};
+
+	    $big_array_type = 1;
+	    $cascade->touch('big_array_trigger');
 
 	    $out->{time1} = time;
 	    $out->{value} = $cascade->run('one_page_0');
@@ -194,10 +227,18 @@ sub set_cascade_rules {
     my ($cascade, $delay) = @_;
 
     $cascade->rule(
+	target		=> 'big_array_trigger',
+	code		=> sub {
+	    return [];
+	}
+    );
+
+    $cascade->rule(
 	target		=> 'big_array',
+	depends		=> 'big_array_trigger',
 	code		=> sub {
 	    sleep $delay;
-	    return [ 1 .. 1000 ];
+	    return $big_array_type ? [ 101 .. 1000 ] : [ 1 .. 1000 ];
 	}
     );
 
